--- a/src/components/Pages/CoronaInfo/CoronaInfo.css
+++ b/src/components/Pages/CoronaInfo/CoronaInfo.css
@@ -1,4 +1,3 @@
-.contact input {
-  padding: 10px 5px;
-  border: 1px solid #ccc !important;
+.corona {
+  background: url("./bg.png") center center/contain;
 }
